# face-recognition

./: .gitignore  CMakeLists.txt  Cargo.toml  main-gui.fbp
rust/: Cargo.toml
rust/src/: eigenfaces.rs  image_mgr.rs  ui.glade
src/: classifier.cpp  classifier.h  eigenfaces.cpp  eigenfaces.h  eigenfaces.rs  fisherfaces.cpp  fisherfaces.h  image_mgr.rs  img_mgr.cpp  img_mgr.h  main.rs  main_frame.cpp  main_frame.h  main_frame_base.cpp  main_frame_base.h  mlp.cpp  mlp.h  projector.cpp  projector.h  report.cpp  report.h  result.cpp  result.h
